<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:clipToPadding="false"
    android:orientation="vertical"
    android:paddingHorizontal="24dp"
    android:paddingTop="15dp"
    android:paddingBottom="20dp"
    tools:context=".view.onboarding.letsyouin.LetsYouIn">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/frame_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"></ImageView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/urbanist_bold"
        android:lineHeight="57.6dp"
        android:text="@string/str_lui"
        android:textAlignment="center"
        android:textSize="48sp"></TextView>

    <LinearLayout
        android:id="@+id/ll_fb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/social_button_background"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="16dp">

        <ImageView
            android:id="@+id/iv_icon_fb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:src="@drawable/frame_3" />

        <TextView
            android:id="@+id/tv_fb_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/urbanist_semibold"
            android:text="@string/login_facebook"
            android:textColor="@color/greyScaleColor"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_google"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/social_button_background"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="16dp">

        <ImageView
            android:id="@+id/iv_icon_google"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:src="@drawable/frame_4" />

        <TextView
            android:id="@+id/tv_google_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/urbanist_semibold"
            android:text="@string/login_google"
            android:textColor="@color/greyScaleColor"
            android:textSize="16sp" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/ll_apple"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/social_button_background"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="16dp">

        <ImageView
            android:id="@+id/iv_icon_apple"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:src="@drawable/frame_4" />

        <TextView
            android:id="@+id/tv_apple_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/urbanist_semibold"
            android:text="@string/login_apple"
            android:textColor="@color/greyScaleColor"
            android:textSize="16sp" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"
            android:background="@color/greyScale" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:fontFamily="@font/urbanist_semibold"
            android:letterSpacing="0.1"
            android:lineHeight="25.2sp"
            android:text="@string/str_divider"
            android:textAlignment="center"
            android:textColor="@color/greyScale600"
            android:textSize="18sp" />

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"
            android:background="@color/greyScale" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_sign_in"
        style="@style/LoginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/urbanist_bold"
        android:lineHeight="22.4dp"
        android:paddingHorizontal="16dp"
        android:text="@string/str_sign_in"
        android:textSize="16sp" />

    <LinearLayout
        android:id="@+id/ll_no_account"
        android:layout_width="match_parent"
        android:layout_height="14dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/tv_no_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/urbanist_medium"
            android:text="@string/str_no_account"
            android:textAlignment="center"
            android:textColor="@color/greyScale500"
            android:textSize="10sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/urbanist_medium"
            android:text="@string/str_no_account_signup"
            android:textColor="@color/primaryColor"
            android:textSize="10sp"/>
    </LinearLayout>

</LinearLayout>