<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:paddingBottom="48dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical"
        android:padding="24dp"
        android:paddingBottom="48dp">

        <ImageView
            android:id="@+id/left_arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:clickable="true"
            android:focusable="true"
            android:background="?android:selectableItemBackground"
            android:src="@drawable/arrow___left" />

        <ImageView
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:src="@drawable/movalogo" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:fontFamily="@font/urbanist_bold"
            android:gravity="center"
            android:text="@string/str_login"
            android:textColor="@color/greyScale900"
            android:textSize="32sp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tfEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:boxBackgroundColor="@color/white"
            app:boxBackgroundMode="outline"
            app:boxCornerRadiusBottomEnd="20dp"
            app:boxCornerRadiusBottomStart="20dp"
            app:boxCornerRadiusTopEnd="20dp"
            app:boxCornerRadiusTopStart="20dp"
            app:errorEnabled="true"
            app:hintEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/message"
                android:drawablePadding="12dp"
                android:hint="@string/str_email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:padding="20dp"
                android:singleLine="true"
                android:textSize="14sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tfPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:boxBackgroundColor="@color/white"
            app:boxBackgroundMode="outline"
            app:boxCornerRadiusBottomEnd="20dp"
            app:boxCornerRadiusBottomStart="20dp"
            app:boxCornerRadiusTopEnd="20dp"
            app:boxCornerRadiusTopStart="20dp"
            app:errorEnabled="true"
            app:hintEnabled="false"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/lock"
                android:drawableEnd="@drawable/group"
                android:drawablePadding="12dp"
                android:hint="@string/str_password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:padding="20dp"
                android:singleLine="true"
                android:textSize="14sp" />
        </com.google.android.material.textfield.TextInputLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center">

            <CheckBox
                android:id="@+id/myCheckbox"
                android:layout_width="24dp"
                android:layout_height="24dp"

                android:background="@drawable/style_checkbox"
                android:button="@null"
                android:padding="8dp" />


            <TextView
                android:id="@+id/tvCheckbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:background="?android:selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:fontFamily="@font/urbanist_medium"
                android:text="@string/str_remember_me"
                android:textColor="@color/greyScale900" />

        </LinearLayout>

        <Button
            android:id="@+id/btnSignIn"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/primaryColor"
            android:fontFamily="@font/urbanist_bold"
            android:gravity="center"
            android:text="@string/str_signin"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="27dp"
            android:background="?android:selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="@font/urbanist_bold"
            android:gravity="center"
            android:text="@string/str_forgot_password"
            android:textColor="@color/primaryColor"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="27dp"
            android:orientation="horizontal"
            android:padding="10dp">

            <View
                android:layout_width="96dp"
                android:layout_height="1dp"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:background="#EEEEEE" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/str_continue"
                android:textColor="@color/greyScale600"
                android:textSize="18sp" />

            <View
                android:layout_width="96dp"
                android:layout_height="1dp"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:background="#EEEEEE" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:background="@drawable/style_icon_background_ripple"
                android:clickable="true"
                android:focusable="true"
                android:paddingHorizontal="32dp"
                android:paddingVertical="18dp"
                android:src="@drawable/frame_3" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:background="@drawable/style_icon_background_ripple"
                android:clickable="true"
                android:focusable="true"
                android:paddingHorizontal="32dp"
                android:paddingVertical="18dp"
                android:src="@drawable/frame_4" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/style_icon_background_ripple"
                android:clickable="true"
                android:focusable="true"
                android:paddingHorizontal="32dp"
                android:paddingVertical="18dp"
                android:src="@drawable/frame_5" />


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="27dp"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="10dp"
                android:background="?android:selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/str_no_account"
                android:textColor="#9E9E9E"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/sign_up_button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="?android:selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:fontFamily="@font/urbanist_bold"
                android:text="@string/str_no_account_signup"
                android:textColor="@color/primaryColor"
                android:textSize="14sp" />

        </LinearLayout>

    </LinearLayout>
</ScrollView>

