<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/HomeScreen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <FrameLayout
            android:id="@+id/frame"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.45"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/homeImage1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@null"
                android:scaleType="fitXY"
                android:src="@drawable/image" />

<!--            <ImageView-->
<!--                android:id="@+id/homeImage2"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="match_parent"-->
<!--                android:contentDescription="@null"-->
<!--                android:scaleType="fitXY"-->
<!--                android:visibility="gone" />-->
        </FrameLayout>

        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="76dp"
            android:contentDescription="@null"
            android:src="@drawable/movalogo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/search"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginTop="76dp"
            android:layout_marginEnd="60dp"
            android:contentDescription="@null"
            android:src="@drawable/search"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/bell"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginTop="76dp"
            android:layout_marginEnd="10dp"
            android:contentDescription="@null"
            android:src="@drawable/bell"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/playButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginBottom="24dp"
            android:background="@drawable/style_play_button"
            android:drawableLeft="@drawable/play_button"
            android:text="@string/play"
            android:textSize="18sp"
            app:backgroundTint="@color/primaryColor"
            app:layout_constraintBottom_toBottomOf="@id/frame"
            app:layout_constraintStart_toStartOf="@id/frame" />

        <Button
            android:id="@+id/myList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginBottom="24dp"
            android:background="@drawable/style_mylist"
            android:drawableLeft="@drawable/plus"
            android:text="@string/mylist"
            android:textSize="14sp"
            app:backgroundTint="@android:color/white"
            app:layout_constraintBottom_toBottomOf="@id/frame"
            app:layout_constraintStart_toEndOf="@id/playButton" />

        <TextView
            android:id="@+id/movieDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:ellipsize="end"
            android:fontFamily="@font/urbanist_medium"
            android:singleLine="true"
            android:text="@string/str_genre"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:layout_constraintBottom_toTopOf="@+id/playButton"
            app:layout_constraintEnd_toEndOf="@id/myList"
            app:layout_constraintStart_toStartOf="@+id/playButton" />

        <TextView
            android:id="@+id/movieName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:ellipsize="end"
            android:fontFamily="@font/urbanist_bold"
            android:singleLine="true"
            android:text="@string/str_movie_name"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/movieDescription"
            app:layout_constraintEnd_toEndOf="@id/myList"
            app:layout_constraintStart_toStartOf="@+id/playButton" />


        <TextView
            android:id="@+id/top10"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="24dp"
            android:layout_marginStart="24dp"
            android:fontFamily="@font/urbanist_bold"
            android:text="@string/str_top_10_movies"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintEnd_toStartOf="@id/see_all1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/frame" />

        <TextView
            android:id="@+id/see_all1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:text="@string/str_see_all"
            android:textColor="@color/primaryColor"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/top10"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/top10" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="24dp"
            android:clipToPadding="false"
            android:orientation="horizontal"
            android:paddingHorizontal="24dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/top10"
            tools:listitem="@layout/rv_image"
            tools:orientation="horizontal"
            app:flow_maxElementsWrap="20"/>

        <TextView
            android:id="@+id/NewReleases"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="24dp"
            android:layout_marginStart="24dp"
            android:fontFamily="@font/urbanist_bold"
            android:text="@string/str_new_releases"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintEnd_toStartOf="@id/see_all2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recyclerView1" />

        <TextView
            android:id="@+id/see_all2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:text="@string/str_see_all"
            android:textColor="@color/primaryColor"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/NewReleases"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/NewReleases" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="24dp"
            android:clipToPadding="false"
            android:orientation="horizontal"
            android:paddingHorizontal="24dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/NewReleases"
            tools:listitem="@layout/rv_image" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>